Adds UtilsCmd